--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,6 @@ name: weather-control
 version: '1.0-SNAPSHOT'
 main: me.bilal.weatherControl.WeatherControl
 api-version: '1.21'
+commands:
+  weather:
+    permission: weathercontrol.admin
